# SICOFVE

./: README.md  SiViT.py  calibration.py  camera_dialog.py  main.py  main_horizontal.py  prueba.py  pyproject.toml  vision.py
progra_camara/: README.md  main.py  readme.md
rasp/: pyproject.toml
